--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -298,7 +298,7 @@ jobs:
   process-results:
     name: Process and Notify Results
     runs-on: ubuntu-latest
-    needs: [zap-baseline-scan]
+    needs: [zap-scan-via-ssh]
     if: always()
     
     steps:
@@ -308,7 +308,7 @@ jobs:
       - name: Download ZAP Reports
         uses: actions/download-artifact@v4
         with:
-          name: zap-baseline-report
+          name: zap-scan-reports
           path: ./zap-reports
 
       - name: Parse ZAP Results
