--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -83,8 +83,8 @@ jobs:
           echo "❌ DVWA is not responding"
           exit 1
 
-  zap-scan-via-ssh:
-    name: ZAP Scan from Windows Server via SSH
+  zap-scan-via-ssm:
+    name: ZAP Scan from Windows Server via SSM
     runs-on: ubuntu-latest
     needs: deploy-dvwa
     
@@ -92,35 +92,80 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup SSH Keys
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          
-          # Add both servers to known hosts
-          ssh-keyscan -H ${{ env.DVWA_HOST }} >> ~/.ssh/known_hosts
-          ssh-keyscan -H ${{ env.ZAP_HOST }} >> ~/.ssh/known_hosts
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
 
-      - name: Run ZAP Scan from Windows Server
+      - name: Run ZAP Scan via Systems Manager
+        id: run-zap
         run: |
-          echo "Triggering ZAP scan on Windows server (51.21.57.0)..."
+          echo "Triggering ZAP scan on Windows server via SSM..."
           echo "Target: DVWA at 13.49.91.130"
           
-          ssh -i ~/.ssh/id_rsa Administrator@${{ env.ZAP_HOST }} "powershell -Command \"& { cd 'C:\\Program Files\\ZAP\\Zed Attack Proxy'; Write-Host '=== Running ZAP Baseline Scan ==='; .\\zap.bat -cmd -quickurl http://13.49.91.130 -quickout 'C:\\zap-reports\\baseline-report.html' -quickprogress; Write-Host '=== Scan completed ==='; if (Test-Path 'C:\\zap-reports\\baseline-report.html') { Write-Host 'Report generated successfully' } else { Write-Host 'Warning: Report not found' } }\""
+          # Send command via SSM
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --document-name "AWS-RunPowerShellScript" \
+            --parameters 'commands=["cd \"C:\\Program Files\\ZAP\\Zed Attack Proxy\"; Write-Host \"=== Running ZAP Baseline Scan ===\"; .\\zap.bat -cmd -quickurl http://13.49.91.130 -quickout \"C:\\zap-reports\\baseline-report.html\" -quickprogress; Write-Host \"=== Scan completed ===\""]' \
+            --output text \
+            --query "Command.CommandId")
+          
+          echo "Command ID: $COMMAND_ID"
+          echo "command_id=$COMMAND_ID" >> $GITHUB_OUTPUT
+          
+          # Wait for command to complete
+          echo "Waiting for scan to complete..."
+          aws ssm wait command-executed \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --timeout 300 || true
+          
+          # Get command output
+          aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --query 'StandardOutputContent' \
+            --output text
           
           echo "✅ ZAP scan completed on Windows server"
 
-      - name: Copy Reports from Windows Server
+      - name: Download Reports from Windows Server
         run: |
           mkdir -p ./zap-reports
           
-          # Copy reports via SCP (requires SSH)
-          scp -i ~/.ssh/id_rsa Administrator@${{ env.ZAP_HOST }}:"C:/zap-reports/*.html" ./zap-reports/ || true
-          scp -i ~/.ssh/id_rsa Administrator@${{ env.ZAP_HOST }}:"C:/zap-reports/*.json" ./zap-reports/ || true
+          # Create a PowerShell script to upload reports to S3 or copy locally
+          COPY_COMMAND_ID=$(aws ssm send-command \
+            --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --document-name "AWS-RunPowerShellScript" \
+            --parameters 'commands=["Get-ChildItem -Path \"C:\\zap-reports\\*.html\" | ForEach-Object { [Convert]::ToBase64String([System.IO.File]::ReadAllBytes($_.FullName)) }"]' \
+            --output text \
+            --query "Command.CommandId")
           
-          echo "✅ Reports copied to GitHub Actions runner"
-          ls -lh ./zap-reports/
+          # Wait for copy command
+          aws ssm wait command-executed \
+            --command-id "$COPY_COMMAND_ID" \
+            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --timeout 60 || true
+          
+          # Get base64 encoded report
+          REPORT_BASE64=$(aws ssm get-command-invocation \
+            --command-id "$COPY_COMMAND_ID" \
+            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --query 'StandardOutputContent' \
+            --output text)
+          
+          # Decode and save report
+          if [ ! -z "$REPORT_BASE64" ]; then
+            echo "$REPORT_BASE64" | base64 -d > ./zap-reports/baseline-report.html
+            echo "✅ Report downloaded successfully"
+          else
+            echo "⚠️ No report generated"
+          fi
+          
+          ls -lh ./zap-reports/ || true
 
       - name: Upload ZAP Scan Reports
         uses: actions/upload-artifact@v4
@@ -138,8 +183,9 @@ jobs:
         run: |
           echo "### 🔒 ZAP Scan Results" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Scan completed on Windows ZAP Server (51.21.57.0)" >> $GITHUB_STEP_SUMMARY
+          echo "✅ Scan completed on Windows ZAP Server via AWS Systems Manager" >> $GITHUB_STEP_SUMMARY
           echo "🎯 Target: DVWA at http://13.49.91.130" >> $GITHUB_STEP_SUMMARY
+          echo "🔒 Method: AWS SSM (No SSH ports exposed)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "📊 **Reports Available:**" >> $GITHUB_STEP_SUMMARY
           echo "- Download from Artifacts section" >> $GITHUB_STEP_SUMMARY
@@ -279,7 +325,7 @@ jobs:
   process-results:
     name: Process and Notify Results
     runs-on: ubuntu-latest
-    needs: [zap-scan-via-ssh]
+    needs: [zap-scan-via-ssm]
     if: always()
     
     steps:
