--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -116,19 +116,30 @@ jobs:
           echo "Command ID: $COMMAND_ID"
           echo "command_id=$COMMAND_ID" >> $GITHUB_OUTPUT
           
-          # Wait for command to complete
+          # Wait for command to complete (poll every 5 seconds for up to 5 minutes)
           echo "Waiting for scan to complete..."
-          aws ssm wait command-executed \
-            --command-id "$COMMAND_ID" \
-            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
-            --timeout 300 || true
+          for i in {1..60}; do
+            STATUS=$(aws ssm get-command-invocation \
+              --command-id "$COMMAND_ID" \
+              --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+              --query 'Status' \
+              --output text 2>/dev/null || echo "Pending")
+            
+            echo "Status: $STATUS (attempt $i/60)"
+            
+            if [ "$STATUS" = "Success" ] || [ "$STATUS" = "Failed" ]; then
+              break
+            fi
+            sleep 5
+          done
           
           # Get command output
+          echo "=== ZAP Scan Output ==="
           aws ssm get-command-invocation \
             --command-id "$COMMAND_ID" \
             --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
             --query 'StandardOutputContent' \
-            --output text
+            --output text || echo "No output available"
           
           echo "✅ ZAP scan completed on Windows server"
 
@@ -136,19 +147,28 @@ jobs:
         run: |
           mkdir -p ./zap-reports
           
-          # Create a PowerShell script to upload reports to S3 or copy locally
+          # Create a PowerShell script to read and encode the report
           COPY_COMMAND_ID=$(aws ssm send-command \
             --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
             --document-name "AWS-RunPowerShellScript" \
-            --parameters 'commands=["Get-ChildItem -Path \"C:\\zap-reports\\*.html\" | ForEach-Object { [Convert]::ToBase64String([System.IO.File]::ReadAllBytes($_.FullName)) }"]' \
+            --parameters 'commands=["if (Test-Path \"C:\\zap-reports\\baseline-report.html\") { [Convert]::ToBase64String([System.IO.File]::ReadAllBytes(\"C:\\zap-reports\\baseline-report.html\")) } else { Write-Host \"REPORT_NOT_FOUND\" }"]' \
             --output text \
             --query "Command.CommandId")
           
-          # Wait for copy command
-          aws ssm wait command-executed \
-            --command-id "$COPY_COMMAND_ID" \
-            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
-            --timeout 60 || true
+          # Wait for copy command to complete
+          echo "Waiting for report download..."
+          for i in {1..12}; do
+            STATUS=$(aws ssm get-command-invocation \
+              --command-id "$COPY_COMMAND_ID" \
+              --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+              --query 'Status' \
+              --output text 2>/dev/null || echo "Pending")
+            
+            if [ "$STATUS" = "Success" ] || [ "$STATUS" = "Failed" ]; then
+              break
+            fi
+            sleep 5
+          done
           
           # Get base64 encoded report
           REPORT_BASE64=$(aws ssm get-command-invocation \
