--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -105,28 +105,11 @@ jobs:
           echo "Triggering ZAP scan on Windows server via SSM..."
           echo "Target: DVWA at 13.49.91.130"
           
-          # Send command via SSM - use only ZAP .bat CLI, absolute paths, robust logging
+          # Send command via SSM - single-line, escaped PowerShell
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
             --document-name "AWS-RunPowerShellScript" \
-            --parameters 'commands=[
-              "if (-not (Test-Path \"C:\\zap-reports\")) { New-Item -ItemType Directory -Path \"C:\\zap-reports\" -Force | Out-Null };
-              cd \"C:\\Program Files\\ZAP\\Zed Attack Proxy\";
-              Write-Host \"=== Running ZAP Baseline Scan ===\";
-              .\\zap.bat -cmd -quickurl http://13.49.91.130 -quickout \"C:\\zap-reports\\baseline-report.html\" -quickprogress *>&1 | Tee-Object \"C:\\zap-reports\\zap-output.txt\";
-              Write-Host \"=== Scan completed ===\";
-              if (Test-Path \"C:\\zap-reports\\baseline-report.html\") {
-                Write-Host \"SUCCESS: Report created\";
-                $size = (Get-Item \"C:\\zap-reports\\baseline-report.html\").Length;
-                Write-Host \"Report size: $size bytes\";
-              } else {
-                Write-Host \"ERROR: No report found\";
-                Write-Host \"Files in C:\\zap-reports:\";
-                Get-ChildItem \"C:\\zap-reports\" | Select-Object Name, Length;
-                Write-Host \"--- zap-output.txt ---\";
-                if (Test-Path \"C:\\zap-reports\\zap-output.txt\") { Get-Content \"C:\\zap-reports\\zap-output.txt\" }
-              }
-            ]' \
+            --parameters 'commands=["if (-not (Test-Path \"C:\zap-reports\")) { New-Item -ItemType Directory -Path \"C:\zap-reports\" -Force | Out-Null }; cd \"C:\Program Files\ZAP\Zed Attack Proxy\"; Write-Host \"=== Running ZAP Baseline Scan ===\"; .\\zap.bat -cmd -quickurl http://13.49.91.130 -quickout \"C:\zap-reports\baseline-report.html\" -quickprogress *>&1 | Tee-Object \"C:\zap-reports\zap-output.txt\"; Write-Host \"=== Scan completed ===\"; if (Test-Path \"C:\zap-reports\baseline-report.html\") { Write-Host \"SUCCESS: Report created\"; $size = (Get-Item \"C:\zap-reports\baseline-report.html\").Length; Write-Host \"Report size: $size bytes\" } else { Write-Host \"ERROR: No report found\"; Write-Host \"Files in C:\zap-reports:\"; Get-ChildItem \"C:\zap-reports\" | Select-Object Name, Length; Write-Host \"--- zap-output.txt ---\"; if (Test-Path \"C:\zap-reports\zap-output.txt\") { Get-Content \"C:\zap-reports\zap-output.txt\" } }"]' \
             --timeout-seconds 600 \
             --output text \
             --query "Command.CommandId")
