--- a/petclinic/.github/workflows/zap-scan.yml
+++ b/petclinic/.github/workflows/zap-scan.yml
@@ -202,3 +202,116 @@ jobs:
             report_json.json
             report_md.md
           retention-days: 30
+  zap-full-scan-via-ssm:
+    name: ZAP Full Scan from Windows Server via SSM
+    runs-on: ubuntu-latest
+    needs: deploy-petclinic
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
+      - name: Run ZAP Full Scan via Systems Manager
+        id: run-zap-full
+        run: |
+          echo "Triggering ZAP full scan on Windows server via SSM..."
+          echo "Target: PetClinic at ${{ env.PETCLINIC_HOST }}:${{ env.PETCLINIC_PORT }}"
+          COMMAND_ID=$(aws ssm send-command \
+            --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --document-name "AWS-RunPowerShellScript" \
+            --parameters 'commands=["Get-Process java -ErrorAction SilentlyContinue | Stop-Process -Force -ErrorAction SilentlyContinue; Start-Sleep -Seconds 2; if (-not (Test-Path \"C:\zap-reports\")) { New-Item -ItemType Directory -Path \"C:\zap-reports\" -Force | Out-Null }; cd \"C:\Program Files\ZAP\Zed Attack Proxy\"; Write-Host \"=== Running ZAP Full Scan ===\"; .\\zap.bat -cmd -quickurl http://${{ env.PETCLINIC_HOST }}:${{ env.PETCLINIC_PORT }} -quickout \"C:\zap-reports\petclinic-fullscan-report.html\" -quickprogress *>&1 | Tee-Object \"C:\zap-reports\zap-fullscan-output.txt\"; Write-Host \"=== Full Scan completed ===\"; if (Test-Path \"C:\zap-reports\petclinic-fullscan-report.html\") { Write-Host \"SUCCESS: Full Scan Report created\"; $size = (Get-Item \"C:\zap-reports\petclinic-fullscan-report.html\").Length; Write-Host \"Report size: $size bytes\" } else { Write-Host \"ERROR: No full scan report found\"; Write-Host \"Files in C:\zap-reports:\"; Get-ChildItem \"C:\zap-reports\" | Select-Object Name, Length; Write-Host \"--- zap-fullscan-output.txt ---\"; if (Test-Path \"C:\zap-reports\zap-fullscan-output.txt\") { Get-Content \"C:\zap-reports\zap-fullscan-output.txt\" } }; if (Test-Path \"C:\Program Files\ZAP\Zed Attack Proxy\zap-report-pdf.bat\") { & \"C:\Program Files\ZAP\Zed Attack Proxy\zap-report-pdf.bat\" \"C:\zap-reports\petclinic-fullscan-report.html\" \"C:\zap-reports\petclinic-fullscan-report.pdf\" } else { Write-Host \"PDF export script not found, skipping PDF export.\" } "]' \
+            --timeout-seconds 1200 \
+            --output text \
+            --query "Command.CommandId")
+          echo "Command ID: $COMMAND_ID"
+          echo "command_id=$COMMAND_ID" >> $GITHUB_OUTPUT
+          echo "Waiting for full scan to complete..."
+          for i in {1..120}; do
+            STATUS=$(aws ssm get-command-invocation \
+              --command-id "$COMMAND_ID" \
+              --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+              --query 'Status' \
+              --output text 2>/dev/null || echo "Pending")
+            echo "Status: $STATUS (attempt $i/120)"
+            if [ "$STATUS" = "Success" ] || [ "$STATUS" = "Failed" ]; then
+              break
+            fi
+            sleep 5
+          done
+          echo "=== ZAP Full Scan Output ==="
+          aws ssm get-command-invocation \
+            --command-id "$COMMAND_ID" \
+            --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+            --query 'StandardOutputContent' \
+            --output text || echo "No output available"
+          echo "✅ ZAP full scan completed on Windows server"
+      - name: Download Full Scan Reports from Windows Server
+        run: |
+          mkdir -p ./zap-reports
+          for ext in html pdf; do
+            COPY_COMMAND_ID=$(aws ssm send-command \
+              --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+              --document-name "AWS-RunPowerShellScript" \
+              --parameters "commands=[\"if (Test-Path 'C:\\zap-reports\\petclinic-fullscan-report.$ext') { [Convert]::ToBase64String([System.IO.File]::ReadAllBytes('C:\\zap-reports\\petclinic-fullscan-report.$ext')) } else { Write-Host 'REPORT_NOT_FOUND' }\"]" \
+              --output text \
+              --query "Command.CommandId")
+            echo "Waiting for report download ($ext)..."
+            for i in {1..12}; do
+              STATUS=$(aws ssm get-command-invocation \
+                --command-id "$COPY_COMMAND_ID" \
+                --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+                --query 'Status' \
+                --output text 2>/dev/null || echo "Pending")
+              if [ "$STATUS" = "Success" ] || [ "$STATUS" = "Failed" ]; then
+                break
+              fi
+              sleep 5
+            done
+            REPORT_BASE64=$(aws ssm get-command-invocation \
+              --command-id "$COPY_COMMAND_ID" \
+              --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+              --query 'StandardOutputContent' \
+              --output text 2>/dev/null || echo "")
+            echo "Report content preview ($ext): ${REPORT_BASE64:0:100}..."
+            if [ ! -z "$REPORT_BASE64" ] && [ "$REPORT_BASE64" != "REPORT_NOT_FOUND" ]; then
+              echo "$REPORT_BASE64" | tr -d '\n\r ' | base64 -d > ./zap-reports/petclinic-fullscan-report.$ext 2>/dev/null && \
+                echo "✅ $ext report downloaded successfully" || \
+                echo "⚠️ Failed to decode $ext report"
+            else
+              echo "⚠️ No $ext report generated or report not found"
+            fi
+          done
+          ls -lh ./zap-reports/ || true
+      - name: Upload ZAP Full Scan Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: zap-petclinic-fullscan-reports
+          path: |
+            zap-reports/petclinic-fullscan-report.html
+            zap-reports/petclinic-fullscan-report.pdf
+          retention-days: 30
+      - name: Save ZAP Full Scan Reports Locally
+        if: always()
+        run: |
+          mkdir -p $GITHUB_WORKSPACE/zap-scan-results
+          cp zap-reports/petclinic-fullscan-report.html $GITHUB_WORKSPACE/zap-scan-results/ 2>/dev/null || true
+          cp zap-reports/petclinic-fullscan-report.pdf $GITHUB_WORKSPACE/zap-scan-results/ 2>/dev/null || true
+          echo "Full scan reports saved to $GITHUB_WORKSPACE/zap-scan-results"
+      - name: Display Full Scan Summary
+        if: always()
+        run: |
+          echo "### 🔒 ZAP Full Scan Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ Full scan completed on Windows ZAP Server via AWS Systems Manager" >> $GITHUB_STEP_SUMMARY
+          echo "🎯 Target: PetClinic at http://${{ env.PETCLINIC_HOST }}:${{ env.PETCLINIC_PORT }}" >> $GITHUB_STEP_SUMMARY
+          echo "🔒 Method: AWS SSM (No SSH ports exposed)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "📊 **Full Scan Reports Available:**" >> $GITHUB_STEP_SUMMARY
+          echo "- Download from Artifacts section" >> $GITHUB_STEP_SUMMARY
+          echo "- View in ZAP GUI: RDP to 51.21.57.0" >> $GITHUB_STEP_SUMMARY
+          echo "- PDF and HTML reports saved in C:\zap-reports on the ZAP server" >> $GITHUB_STEP_SUMMARY
