--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+# TEST COMMENT: Trigger PetClinic workflow only
 services:
   petclinic:
     image: springcommunity/spring-petclinic-rest
