--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3.8'
 # TEST COMMENT: Trigger PetClinic workflow only
+# ANOTHER TEST COMMENT: Trigger PetClinic workflow and ZAP full scan
 services:
   petclinic:
     image: springcommunity/spring-petclinic-rest
