test: add comment to trigger PetClinic workflow

--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -1,3 +1,4 @@
+# test: trigger workflow
 version: '3.8'
 # TEST COMMENT: Trigger PetClinic workflow only
 # ANOTHER TEST COMMENT: Trigger PetClinic workflow and ZAP full scan
