--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -1,3 +1,4 @@
+# Trigger: test workflow run (2025-12-30)
 # test: trigger workflow
 version: '3.8'
 # TEST COMMENT: Trigger PetClinic workflow only
