--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -1,3 +1,4 @@
+# test: another trigger (2025-12-30)
 # test: trigger workflow (2025-12-30, port fix)
 # test: trigger workflow (2025-12-30)
 # Trigger: test workflow run (2025-12-30)
