--- a/petclinic/docker-compose.yml
+++ b/petclinic/docker-compose.yml
@@ -1,3 +1,5 @@
+# test: workflow trigger (2025-12-30, verified)
+# test: trigger workflow (2025-12-30, final check)
 # test: another trigger (2025-12-30)
 # test: trigger workflow (2025-12-30, port fix)
 # test: trigger workflow (2025-12-30)
