--- a/.github/workflows/zap-scan-petclinic.yml
+++ b/.github/workflows/zap-scan-petclinic.yml
@@ -47,44 +47,123 @@ on:
       target_url:
         description: 'Target URL to scan (optional, overrides default)'
         required: false
-        type: string
-  schedule:
-    - cron: '0 2 * * *'
 
-env:
-  PETCLINIC_HOST: '13.49.91.130'
-  PETCLINIC_PORT: '8082'
-  ZAP_HOST: '51.21.57.0'
-  TARGET_URL: ${{ inputs.target_url != '' && inputs.target_url || 'http://13.49.91.130:8082' }}
-  ZAP_VERSION: 'stable'
+        name: PetClinic ZAP DAST Scan
 
-jobs:
-  deploy-petclinic:
-    name: Deploy PetClinic Application
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Setup SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ env.PETCLINIC_HOST }} >> ~/.ssh/known_hosts
-      - name: Deploy PetClinic Application to EC2
-        run: |
-          echo "Deploying PetClinic to ${{ env.PETCLINIC_HOST }}..."
-          ssh -i ~/.ssh/id_rsa ubuntu@${{ env.PETCLINIC_HOST }} << 'EOF'
-            echo "Pulling latest PetClinic image..."
-            sudo docker pull springcommunity/spring-petclinic-rest:latest
-            echo "Stopping existing PetClinic container..."
-            sudo docker stop $(sudo docker ps -q --filter ancestor=springcommunity/spring-petclinic-rest) || true
-            sudo docker rm $(sudo docker ps -aq --filter ancestor=springcommunity/spring-petclinic-rest) || true
-            echo "Starting new PetClinic container on port 8082..."
-            sudo docker run -d --name petclinic -p 8082:9966 springcommunity/spring-petclinic-rest:latest
             echo "Waiting for PetClinic to be ready..."
+          push:
+            paths:
+              - 'petclinic/**'
+          pull_request:
+            paths:
+              - 'petclinic/**'
+          workflow_dispatch:
+            inputs:
+              target_url:
+                description: 'Target URL to scan (optional, overrides default)'
+                required: false
+                type: string
+          schedule:
+            - cron: '0 2 * * *'
+
             sleep 30
+          PETCLINIC_HOST: '13.49.91.130'
+          PETCLINIC_PORT: '8082'
+          ZAP_HOST: '51.21.57.0'
+          TARGET_URL: ${{ inputs.target_url != '' && inputs.target_url || 'http://13.49.91.130:8082' }}
+          ZAP_VERSION: 'stable'
+
             echo "PetClinic deployment completed!"
+          deploy-petclinic:
+            name: Deploy PetClinic Application
+            runs-on: ubuntu-latest
+            steps:
+              - name: Checkout code
+                uses: actions/checkout@v4
+              - name: Setup SSH Key
+                run: |
+                  mkdir -p ~/.ssh
+                  echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+                  chmod 600 ~/.ssh/id_rsa
+                  ssh-keyscan -H ${{ env.PETCLINIC_HOST }} >> ~/.ssh/known_hosts
+              - name: Deploy PetClinic Application to EC2
+                run: |
+                  echo "Deploying PetClinic to ${{ env.PETCLINIC_HOST }}..."
+                  ssh -i ~/.ssh/id_rsa ubuntu@${{ env.PETCLINIC_HOST }} << 'EOF'
+                    echo "Pulling latest PetClinic image..."
+                    sudo docker pull springcommunity/spring-petclinic-rest:latest
+                    echo "Stopping existing PetClinic container..."
+                    sudo docker stop $(sudo docker ps -q --filter ancestor=springcommunity/spring-petclinic-rest) || true
+                    sudo docker rm $(sudo docker ps -aq --filter ancestor=springcommunity/spring-petclinic-rest) || true
+                    echo "Starting new PetClinic container on port 8082..."
+                    sudo docker run -d --name petclinic -p 8082:9966 springcommunity/spring-petclinic-rest:latest
+                    echo "Waiting for PetClinic to be ready..."
+                    sleep 30
+                    echo "PetClinic deployment completed!"
+                  EOF
+              - name: Verify PetClinic is Running
+                run: |
+                  echo "Checking if PetClinic is accessible..."
+                  for i in {1..10}; do
+                    if curl -f -s -o /dev/null http://${{ env.PETCLINIC_HOST }}:${{ env.PETCLINIC_PORT }}/petclinic; then
+                      echo "✅ PetClinic is up and running!"
+                      exit 0
+                    fi
+                    echo "Waiting for PetClinic... (attempt $i/10)"
+                    sleep 10
+                  done
+                  echo "❌ PetClinic is not responding"
+                  echo "--- TROUBLESHOOT: Printing Docker logs from EC2 ---"
+                  ssh -i ~/.ssh/id_rsa ubuntu@${{ env.PETCLINIC_HOST }} 'sudo docker ps -a; sudo docker logs petclinic || echo "No logs found for petclinic container"'
+                  exit 1
+
+          zap-full-scan-via-ssm:
+            name: ZAP Full Scan from Windows Server via SSM
+            runs-on: ubuntu-latest
+            needs: deploy-petclinic
+            steps:
+              - name: Checkout code
+                uses: actions/checkout@v4
+              - name: Configure AWS Credentials
+                uses: aws-actions/configure-aws-credentials@v4
+                with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: eu-north-1
+              - name: Run ZAP Full Scan via Systems Manager
+                id: run-zap-full
+                run: |
+                  echo "Triggering ZAP full scan on Windows server via SSM..."
+                  echo "Target: PetClinic at ${{ env.PETCLINIC_HOST }}:${{ env.PETCLINIC_PORT }}"
+                  COMMAND_ID=$(aws ssm send-command \
+                    --instance-ids "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+                    --document-name "AWS-RunPowerShellScript" \
+                    --parameters '{"commands":["Get-Process java -ErrorAction SilentlyContinue | Stop-Process -Force -ErrorAction SilentlyContinue; Start-Sleep -Seconds 2; if (-not (Test-Path \\\"C:\\zap-reports\\\")) { New-Item -ItemType Directory -Path \\\"C:\\zap-reports\\\" -Force | Out-Null }; cd \\\"C:\\Program Files\\ZAP\\Zed Attack Proxy\\\"; Write-Host \\\"=== Running ZAP Full Scan ===\\\"; .\\\\zap.bat -cmd -port 8090 -quickurl http://${{ env.PETCLINIC_HOST }}:${{ env.PETCLINIC_PORT }}/petclinic -quickout \\\"C:\\zap-reports\\petclinic-fullscan-report.html\\\" -quickprogress *>&1 | Tee-Object \\\"C:\\zap-reports\\zap-fullscan-output.txt\\\"; Write-Host \\\"=== Full Scan completed ===\\\"; if (Test-Path \\\"C:\\zap-reports\\petclinic-fullscan-report.html\\\") { Write-Host \\\"SUCCESS: Full Scan Report created\\\"; $size = (Get-Item \\\"C:\\zap-reports\\petclinic-fullscan-report.html\\\").Length; Write-Host \\\"Report size: $size bytes\\\" } else { Write-Host \\\"ERROR: No full scan report found\\\"; Write-Host \\\"Files in C:\\zap-reports:\\\"; Get-ChildItem \\\"C:\\zap-reports\\\" | Select-Object Name, Length; Write-Host \\\"--- zap-fullscan-output.txt ---\\\"; if (Test-Path \\\"C:\\zap-reports\\zap-fullscan-output.txt\\\") { Get-Content \\\"C:\\zap-reports\\zap-fullscan-output.txt\\\" } }; if (Test-Path \\\"C:\\Program Files\\ZAP\\Zed Attack Proxy\\zap-report-pdf.bat\\\") { & \\\"C:\\Program Files\\ZAP\\Zed Attack Proxy\\zap-report-pdf.bat\\\" \\\"C:\\zap-reports\\petclinic-fullscan-report.html\\\" \\\"C:\\zap-reports\\petclinic-fullscan-report.pdf\\\" } else { Write-Host \\\"PDF export script not found, skipping PDF export.\\\" }"]}' \
+                    --timeout-seconds 1200 \
+                    --output text \
+                    --query "Command.CommandId")
+                  echo "Command ID: $COMMAND_ID"
+                  echo "command_id=$COMMAND_ID" >> $GITHUB_OUTPUT
+                  echo "Waiting for full scan to complete..."
+                  for i in {1..120}; do
+                    STATUS=$(aws ssm get-command-invocation \
+                      --command-id "$COMMAND_ID" \
+                      --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+                      --query 'Status' \
+                      --output text 2>/dev/null || echo "Pending")
+                    echo "Status: $STATUS (attempt $i/120)"
+                    if [ "$STATUS" = "Success" ] || [ "$STATUS" = "Failed" ]; then
+                      break
+                    fi
+                    sleep 5
+                  done
+                  echo "=== ZAP Full Scan Output ==="
+                  aws ssm get-command-invocation \
+                    --command-id "$COMMAND_ID" \
+                    --instance-id "${{ secrets.WINDOWS_INSTANCE_ID }}" \
+                    --query 'StandardOutputContent' \
+                    --output text || echo "No output available"
+                  echo "✅ ZAP full scan completed on Windows server"
           EOF
       - name: Verify PetClinic is Running
         run: |
